--- a/app/templates/serviceTemplates/template1.html
+++ b/app/templates/serviceTemplates/template1.html
@@ -3,3 +3,46 @@
 <link rel="stylesheet" href="{% static "css/template1-mainpage.css" %}">
 <script src="{% static "js/template1-mainpage.js" %}"></script>
 
+
+<!-- This is a button toggling the modal with the default close button -->
+<button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #modal-close-default">Добавить комнату</button>
+
+<!-- This is the modal with the default close button -->
+<div id="modal-close-default" uk-modal>
+    <div class="uk-modal-dialog uk-modal-body">
+        <button class="uk-modal-close-default" type="button" uk-close></button>
+        <h2 class="uk-modal-title">Default</h2>
+        <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+            {% csrf_token %}
+            <div class="uk-width-1-2">
+                <label class="uk-form-label">
+                    <h4>name</h4>
+                </label>
+                <input class="uk-input uk-border-rounded" name="name" type="text" id="name"
+                    placeholder="name" value="name">
+            </div>
+
+            <div class="uk-width-1-2@s">
+                <label class="uk-form-label">
+                    <h4>amount_of_users</h4>
+                </label>
+                <input class="uk-input uk-border-rounded" name="amount_of_users" type="text" id="amount_of_users"
+                    placeholder="5" value="5">
+            </div>
+
+            <div class="uk-width-1-1@s uk-text-center uk-margin-medium-top">
+                <button
+                    class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                    type="submit" name="AddRoom">Сохранить</button>
+                <button class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-left uk-border-rounded"
+                    type="">Назад</button>
+
+            </div>
+        </form>    </div>
+</div>
+
+
+
+
+
+
