--- a/app/templates/service.html
+++ b/app/templates/service.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Freeloo</title>
+    <title>Service</title>
     <link rel="shortcut icon" type="image/x-icon" href="../../../media/logoImage/Befreed.png"/>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/css/uikit.min.css" />
