--- a/app/templates/serviceTemplates/template1.html
+++ b/app/templates/serviceTemplates/template1.html
@@ -54,6 +54,23 @@
             <div class="uk-card uk-card-default uk-card-small uk-card-body">
                 <h3 class="uk-card-title">{{room.name}}</h3>
                 <p>Кол-во пользователей: {{room.amount_of_users}}</p>
+                {% if user.room == room.id %}
+                    <span class="uk-label uk-label-success">Вы в этой комнате!</span>
+                    <br>
+
+                {% endif %}
+                    <br>
+                <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+                    {% csrf_token %}
+                        <button
+                            class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                            type="submit" name="AddToRoom" value="{{room.id}}">Присоединиться к комнате</button>
+                
+                        <button
+                            class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                            type="submit" name="LeaveToRoom">Выйти</button>
+                       
+                </form> 
             </div>
         </a>
     </div>
