--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div>
-        <form action="" method="POST">
-            <!-- Изменено с method="GET" на method="POST" -->
-            <!-- GET - получаем | POST - отправляем -->
-            <input type="number" name="time" value="{{ server.time }}">
-            <button type="submit">Do it</button>
-        </form>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <div>
+            <form action="/simple_function/" method="GET">
+                <!-- Изменено с method="GET" на method="POST" -->
+                <!-- GET - получаем | POST - отправляем -->
+                <input type="number" name="time" value="{{ server.time }}">
+                <button type="submit">Do it</button>
+            </form>
+        </div>
+    </body>
 </html>
