add some design

--- a/app/templates/service.html
+++ b/app/templates/service.html
@@ -35,8 +35,11 @@ input::-webkit-outer-spin-button,
 
 <body style="pointer-events: auto;">
 
+    {% include "menuService.html" %}
 
-    <div id="MainWindowContainer" >
+
+
+    <div id="MainWindowContainer" class="uk-width-4-5 uk-margin-auto" >
     </div>
 
 
