--- a/app/templates/menuService.html
+++ b/app/templates/menuService.html
@@ -9,9 +9,9 @@
                     <div class="uk-navbar-left">
         
                         <ul class="uk-navbar-nav">
-                            <li class="uk-active"><a href="#">Active</a></li>
-                            <li>
-                                <a href="#">Parent</a>
+                            <li class="uk-active"><a href="/">На главную</a></li>
+                            <!-- <li>
+                                <a href="/">На главную</a>
                                 <div class="uk-navbar-dropdown">
                                     <ul class="uk-nav uk-navbar-dropdown-nav">
                                         <li class="uk-active"><a href="#">Active</a></li>
@@ -20,7 +20,52 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Item</a></li>
+                            <li><a href="#">Item</a></li> -->
+                        </ul>
+        
+                    </div>
+                    <div class="uk-navbar-right">
+        
+                        <ul class="uk-navbar-nav">
+                            <!-- <li class="uk-active"><a href="#">Active</a></li> -->
+                            
+                            <!-- This is a button toggling the modal with the default close button -->
+                            <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #modal-close-default">Добавить комнату</button>
+
+                            <!-- This is the modal with the default close button -->
+                            <div id="modal-close-default" uk-modal>
+                                <div class="uk-modal-dialog uk-modal-body">
+                                    <button class="uk-modal-close-default" type="button" uk-close></button>
+                                    <h2 class="uk-modal-title">Default</h2>
+                                    <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+                                        {% csrf_token %}
+                                        <div class="uk-width-1-2">
+                                            <label class="uk-form-label">
+                                                <h4>name</h4>
+                                            </label>
+                                            <input class="uk-input uk-border-rounded" name="name" type="text" id="name"
+                                                placeholder="name" value="name">
+                                        </div>
+
+                                        <div class="uk-width-1-2@s">
+                                            <label class="uk-form-label">
+                                                <h4>amount_of_users</h4>
+                                            </label>
+                                            <input class="uk-input uk-border-rounded" name="amount_of_users" type="text" id="amount_of_users"
+                                                placeholder="5" value="5">
+                                        </div>
+
+                                        <div class="uk-width-1-1@s uk-text-center uk-margin-medium-top">
+                                            <button
+                                                class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                                                type="submit" name="AddRoom">Сохранить</button>
+                                            <button class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-left uk-border-rounded"
+                                                type="">Назад</button>
+
+            </div>
+        </form> 
+     </div>
+</div>
                         </ul>
         
                     </div>
