added semultanious play and selection of song. without reload

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,8 @@
 </script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.10/dist/js/uikit-icons.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 <script>
     // function red(el) {
     //     document.getElementById('searchBtn').href = "goods/search/" + el.value;
