--- a/app/templates/serviceTemplates/template1.html
+++ b/app/templates/serviceTemplates/template1.html
@@ -28,10 +28,11 @@
                         <button
                             class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
                             type="submit" name="AddToRoom" value="{{room.id}}">Присоединиться к комнате</button>
-                
+                        {% if user.room == room.id %}
                         <button
                             class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
                             type="submit" name="LeaveToRoom">Выйти</button>
+                        {% endif %}
                        
                 </form> 
             </div>
