--- a/app/templates/serviceTemplates/template1.html
+++ b/app/templates/serviceTemplates/template1.html
@@ -13,6 +13,8 @@
     {% for room in rooms %}
 
     <div>
+    {% if room.amount_of_users != room.mx_users %}
+
         <a href="room/{{room.id}}/">
             <div class="uk-card uk-card-default uk-card-small uk-card-body">
                 <h3 class="uk-card-title">{{room.name}}</h3>
@@ -25,9 +27,14 @@
                     <br>
                 <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
                     {% csrf_token %}
+                        {% if room.amount_of_users != room.mx_users %}
                         <button
                             class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
                             type="submit" name="AddToRoom" value="{{room.id}}">Присоединиться к комнате</button>
+                        {% else %}
+                        <h3>Простите, но комната переполнена. Подождите, пока из не кто-то выйдет</h3>
+                        {% endif %}
+
                         {% if user.room == room.id %}
                         <button
                             class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
@@ -37,6 +44,31 @@
                 </form> 
             </div>
         </a>
+    {% else %}
+
+        <div class="uk-card uk-card-default uk-card-small uk-card-body">
+            <h3 class="uk-card-title">{{room.name}}</h3>
+            <p>Кол-во пользователей: {{room.amount_of_users}}</p>
+            {% if user.room == room.id %}
+                <span class="uk-label uk-label-success">Вы в этой комнате!</span>
+                <br>
+
+            {% endif %}
+                <br>
+            <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+                {% csrf_token %}
+                    <h3>Простите, но комната переполнена. Подождите, пока из не кто-то выйдет</h3>
+
+                    {% if user.room == room.id %}
+                    <button
+                        class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                        type="submit" name="LeaveToRoom">Выйти</button>
+                    {% endif %}
+                    
+            </form> 
+        </div>
+    {% endif %}
+    
     </div>
     {% endfor %}
 
