--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -111,7 +111,7 @@
                         </h1>
 
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure, nesciunt labore amet non iste, eius consectetur doloribus nemo corrupti debitis delectus repudiandae, ipsam cupiditate! Dolor earum sapiente ducimus facilis!
+                            Наш сервис предлагает вам не только возможность наслаждаться музыкой, но и уникальную аналитику для вашего опыта. Получайте статистику о вашем музыкальном вкусе, самых прослушиваемых треках и рекомендациях.
                         </p>
 
                 </div>
@@ -119,11 +119,11 @@
                 <div class="card uk-margin-large-right">
                     
                         <h1>
-                            Реклама товаров
+                            Общение с сообществом
                         </h1>
 
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure, nesciunt labore amet non iste, eius consectetur doloribus nemo corrupti debitis delectus repudiandae, ipsam cupiditate! Dolor earum sapiente ducimus facilis!
+                            В нашем сервисе будет реализована возможность взаимодействия с другими пользователями и добавления новых функций. Например, пользователи смогут комментировать и оценивать треки, создавать свои группы для совместного прослушивания музыки и так далее.
                         </p>
 
                 </div>
