--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -133,11 +133,11 @@
                 <div class="card ">
                     
                         <h1>
-                            Наша доставка 
+                            Адаптивный интерфейс 
                         </h1>
 
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iure, nesciunt labore amet non iste, eius consectetur doloribus nemo corrupti debitis delectus repudiandae, ipsam cupiditate! Dolor earum sapiente ducimus facilis!
+                            Сервис будет иметь адаптивный интерфейс, который будет адаптироваться под разные устройства и платформы, обеспечивая одинаковый уровень удобства и качества пользовательского опыта на всех них.
                         </p>
 
                 </div>
