--- a/app/templates/service.html
+++ b/app/templates/service.html
@@ -41,6 +41,7 @@ input::-webkit-outer-spin-button,
     <div id="MainWindowContainer" class="uk-width-4-5 uk-margin-auto" >
     </div>
 
+    {% include "footer.html" %}
 
 </body>
 
