--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -4,52 +4,52 @@
 
 {% load static %}
 
-<a class="uk-button uk-button-default" href="/service/">Назад в меню</a>
+{% include "menuRoom.html" %}
+
+<div id="MainWindowContainer" class="uk-width-4-5 uk-margin-auto" >
 
 
-<h1>Комната №{{room.id}}</h1>
+    <h1>Комната №{{room.id}}</h1>
 
-<h3 class="uk-card-title"> Название: {{room.name}}</h3>
-<p>Кол-во пользователей: {{room.amount_of_users}}</p>
+    <h3 class="uk-card-title"> Название: {{room.name}}</h3>
+    <p>Кол-во пользователей: {{room.amount_of_users}}</p>
 
-<form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
-    {% csrf_token %}
-        <button
-            class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
-            type="submit" name="AddToRoom">Присоединиться к комнате</button>
+    <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+        {% csrf_token %}
+            <button
+                class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                type="submit" name="AddToRoom">Присоединиться к комнате</button>
 
-        <button
-            class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
-            type="submit" name="LeaveToRoom">Выйти</button>
-       
-</form> 
+            <button
+                class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
+                type="submit" name="LeaveToRoom">Выйти</button>
+        
+    </form> 
 
-<h2>Выберите песню</h2>
-<form id="songForm" method="post" enctype="multipart/form-data" uk-grid>
-    {% csrf_token %}
-    {% for song in songs %}
-        <button
-            class="uk-button uk-button-secondary uk-width-1-3 uk-margin-medium-right uk-border-rounded song-button"
-            data-song-name="{{ song }}"
-            data-song-id = "{{ song.id }}"
-            type="button">
-            {{ song }}
-        </button>
-    {% endfor %}
-</form>
+    <h2>Выберите песню</h2>
+    <form id="songForm" method="post" enctype="multipart/form-data" uk-grid>
+        {% csrf_token %}
+        {% for song in songs %}
+            <button
+                class="uk-button uk-button-secondary uk-width-1-3 uk-margin-medium-right uk-border-rounded song-button"
+                data-song-name="{{ song }}"
+                data-song-id = "{{ song.id }}"
+                type="button">
+                {{ song }}
+            </button>
+        {% endfor %}
+    </form>
 
-<!--  -->
-{% if user.room == room.id %}
-<h4 id="sonng-name">Песня {{room.song}}</h4>
-<body>
-    <div class="uk-alert-success" uk-alert>
-        <a href class="uk-alert-close" uk-close></a>
+    <!--  -->
+    {% if user.room == room.id %}
+    <h4 id="sonng-name">Песня {{room.song}}</h4>
+        <div class="uk-alert-success" uk-alert>
+            <a href class="uk-alert-close" uk-close></a>
 
-        <audio src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
+            <audio src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
 
-    </div>
-
-</body>
+        </div>
+</div>
 
 
 {% endif %}
