--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -9,50 +9,78 @@
 <div id="MainWindowContainer" class="uk-width-4-5 uk-margin-auto" >
 
 
-    <h1>Комната №{{room.id}}</h1>
+ 
 
-    <h3 class="uk-card-title"> Название: {{room.name}}</h3>
-    <p>Кол-во пользователей: {{room.amount_of_users}}</p>
 
-    <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
-        {% csrf_token %}
-            <button
-                class="uk-button uk-button-primary uk-width-1-3 uk-margin-medium-right uk-border-rounded"
-                type="submit" name="AddToRoom">Присоединиться к комнате</button>
+            <div class="uk-child-width-1-2 uk-text-center" uk-grid>
 
-            <button
-                class="uk-button uk-button-danger uk-width-1-3 uk-margin-medium-right uk-border-rounded"
-                type="submit" name="LeaveToRoom">Выйти</button>
-        
-    </form> 
+                <div class="uk-width-expand@m">
+                    <div class="uk-card uk-card-default uk-card-body">
+                        
+                        <h1>Комната №{{room.id}}</h1>
 
-    <h2>Выберите песню</h2>
-    <form id="songForm" method="post" enctype="multipart/form-data" uk-grid>
-        {% csrf_token %}
-        {% for song in songs %}
-            <button
-                class="uk-button uk-button-secondary uk-width-1-3 uk-margin-medium-right uk-border-rounded song-button"
-                data-song-name="{{ song }}"
-                data-song-id = "{{ song.id }}"
-                type="button">
-                {{ song }}
-            </button>
-        {% endfor %}
-    </form>
+                        <h3 class="uk-card-title"> Название: {{room.name}}</h3>
+                        <p>Кол-во пользователей: {{room.amount_of_users}}</p>
+                
+  
+                
+                        <h2>Выберите песню</h2>
+                        <form id="songForm" method="post" enctype="multipart/form-data" uk-grid>
+                            {% csrf_token %}
+                            {% for song in songs %}
+                                <button
+                                    class="uk-button uk-button-secondary uk-width-1-3 uk-margin-medium-right uk-border-rounded song-button"
+                                    data-song-name="{{ song }}"
+                                    data-song-id = "{{ song.id }}"
+                                    type="button">
+                                    {{ song }}
+                                </button>
+                            {% endfor %}
+                        </form>
+                
+                        
+                        {% if user.room == room.id %}
+                        <h4 id="sonng-name">Песня {{room.song}}</h4>
+                        <div class="uk-alert-success" uk-alert>
+                            <a href class="uk-alert-close" uk-close></a>
+                
+                            <audio src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
+                
+                        </div>
+                        {% endif %}
 
-    <!--  -->
-    {% if user.room == room.id %}
-    <h4 id="sonng-name">Песня {{room.song}}</h4>
-        <div class="uk-alert-success" uk-alert>
-            <a href class="uk-alert-close" uk-close></a>
 
-            <audio src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
+                    </div>
+                </div>
 
+                <div class="uk-width-1-3@m">
+                    <div class="uk-card uk-card-default uk-card-body">
+
+                        <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
+                            {% csrf_token %}
+                                <button
+                                    class="uk-button uk-button-primary uk-width-2-3 uk-border-rounded"
+                                    type="submit" name="AddToRoom">Присоединиться к комнате</button>
+                
+                                <button
+                                    class="uk-button uk-button-danger uk-width-2-3 uk-border-rounded"
+                                    type="submit" name="LeaveToRoom">Выйти</button>
+                            
+                        </form> 
+
+                    </div>
+                </div>
+                
+            </div>
+            
         </div>
+
+
+
+
 </div>
 
 
-{% endif %}
 
 <script>
     $(document).ready(function () {
