--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -44,7 +44,7 @@
                         <div class="uk-alert-success" uk-alert>
                             <a href class="uk-alert-close" uk-close></a>
                 
-                            <audio src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
+                            <audio id="roomAudio" src="{% static 'music/' %}{{ room.song }}" controls autoplay></audio>
                 
                         </div>
                         {% endif %}
@@ -57,10 +57,11 @@
 
                         <form class="uk-grid-small" method="post" enctype="multipart/form-data" uk-grid>
                             {% csrf_token %}
+                            {% if user.room != room.id %}
                                 <button
                                     class="uk-button uk-button-primary uk-width-2-3 uk-border-rounded"
                                     type="submit" name="AddToRoom">Присоединиться к комнате</button>
-                
+                            {% endif %}
                                 <button
                                     class="uk-button uk-button-danger uk-width-2-3 uk-border-rounded"
                                     type="submit" name="LeaveToRoom">Выйти</button>
@@ -130,7 +131,7 @@
     roomSocket.onmessage = function(e){
         let data = JSON.parse(e.data)
     }
-
+    console.log('connection:', data)
 </script>
 
 <!-- plsy button control -->
